default/objects/LongForm_Fleetcor_Product__c/LongForm_Fleetcor_Product__c.object-meta.xml
<CustomObject>
    <label>LongForm Fleetcor Product</label>
    <nameField>
        <label>LongForm Fleetcor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LongForm Fleetcor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>