default/objects/LongForm_Fleetcor_Product__c/fields/Long_Form_Offer__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Offer__c</fullName>
    <label>Long Form Offer</label>
    <referenceTo>LongForm_Offer__c</referenceTo>
    <relationshipName>Long_Form_Fleetcor_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>