default/objects/LongForm_Fleetcor_Product__c/fields/Long_Form_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Pricelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Pricelist</label>
    <referenceTo>LongForm_Pricelist__c</referenceTo>
    <relationshipLabel>LongForm Fleetcor Products</relationshipLabel>
    <relationshipName>Long_Form_Fleetcor_Products</relationshipName>
    <type>Lookup</type>
</CustomField>